<resources>
    <string name="app_name">A30_AlertDialog</string>

    <string name="btn_normal">显示一个普通的Dialog</string>
    <string name="btn_list">显示一个带列表的Dialog</string>
    <string name="btn_radio">显示一个带单选框的Dialog</string>
    <string name="btn_checkbox">显示一个带复选框的Dialog</string>
    <string name="btn_customized">显示一个完全自定义的Dialog</string>

    <string name="dialog_title">提示信息</string>
    <string name="dialog_content">这里是自定义Dialog的内容</string>
    <string name="dialog_close">X</string>
    <string name="go_baidu">访问百度</string>
    <string name="dialog_cancel">取消</string>
</resources>
